--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@theme {
-  --font-poppins: "Poppins", "sans-serif";
-  --spacing-header-height: 96px;
+/* the slides */
+.slick-slide > div {
+  margin: 0 27px !important;
 }
